# Hyper-Trading-Automation

./: .env.production  .env.template  .gitignore  Dockerfile  ENHANCEMENT_SUMMARY.md  EQUITY_TRACKING_SOLUTION.md  MERGE_SUMMARY.md  README.md  WINDOWS_DEPLOYMENT_GUIDE.md  config.sample.yaml  config.yaml  config_enhanced.yaml  docker-compose.yml  live_trading_config.yaml  multi_strategy_config.yaml  pyproject.toml  requirements.txt  requirements_enhanced.txt  run_all_backtests.py  run_backtests.py  run_bot_continuous.py  signal.db  signal.json  state.db  state.json
configs/: enhanced_conservative_config.yaml  optimized_config.yaml  profit_optimization_config.yaml  ultra_enhanced_config.yaml  ultra_optimized_config.yaml
dashboard/: clean_dashboard.py  real_dashboard.py  streamlit_app.py
data/: README.md  btc_real_data.csv  signal.json  state.db  state.db-shm  state.db-wal  state.json
docs/: BACKTESTING_GUIDE.md  BOT_ANALYSIS.md  COMPLETE_AUDIT.md  COMPONENT_AUDIT.md  DATABASE_FIXES_APPLIED.md  FINAL_COMPONENT_AUDIT.md  INTEGRATION_COMPLETE.md  ML_INTEGRATION_GUIDE.md  modules.md  production_readiness.md
examples/: README.md  comprehensive_backtest.py  ml_backtesting_example.py  real_data_backtest_example.py  run_backtest.py
hypertrader/: __init__.py  backtest.py  backtest_event.py  bot.py  components.yaml  config.py  orchestrator.py
scripts/: README.md  analyze_trade_logs.py  component_audit.py  comprehensive_backtest.py  comprehensive_integration_test.py  connectivity_check.py  get_real_data.py  integration_test.py  live_backtest.py  model_retrainer.py  (+7 more)
(+208 files in other folders)
