[project]
name = "hyper-trading-automation"
version = "0.1.0"
description = ""
authors = [
    {name = "Codex",email = "codex@openai.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "ccxt==4.3.22",
    "cryptofeed==2.4.1",
    "websockets==12.0",
]

[project.optional-dependencies]
performance = ["uvloop==0.19.0", "ujson==5.9.0"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
