[project]
name = "hyper-trading-automation"
version = "0.1.0"
description = ""
authors = [
    {name = "Codex",email = "codex@openai.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "ccxt==4.3.22",
    "cryptofeed==2.4.1",
    "pandas (>=2.3.1,<3.0.0)",
    "vectorbt (>=0.28.0,<0.29.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "vadersentiment (>=3.3.2,<4.0.0)",
    "prometheus-client (>=0.22.1,<0.23.0)",
    "yfinance (>=0.2.65,<0.3.0)",
    "fredapi (>=0.5.2,<0.6.0)",
]

[project.optional-dependencies]
performance = ["uvloop==0.19.0", "ujson==5.9.0"]

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^1.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
